# utec-py

./: .gitignore  LICENSE  README.md  activity.py  api.py  authenticator.py  const.py  device.py  incom.auth.py  pyproject.toml  requirements-test.txt  temp.py
.github/workflows/: python-publish.yml  test.yml
docs/superpowers/plans/: 2026-04-18-test-coverage.md  AUDIT-utec-py-2026-04-18.md  LLM-LOG-2026-04-18.md
scripts/: test_api_behavior.py  test_webhook.py
src/utec_py/: api.py  auth.py  const.py  exceptions.py
src/utec_py.egg-info/: PKG-INFO  SOURCES.txt
src/utec_py/devices/: device.py  device_const.py  light.py  lock.py  sensor.py  switch.py
src/utec_py_LF2b2w/: api.py  auth.py  const.py  device.py  device_handler.py  device_manager.py  exceptions.py
src/utec_py_LF2b2w/devices/: device.py  device_const.py  device_types.py  light.py  lock.py  switch.py
tests/: conftest.py  test_api.py  test_auth.py  test_base_device.py  test_device_const.py  test_device_info.py  test_exceptions.py  test_light.py  test_lock.py  test_pytest.py  test_smoke.py  test_switch.py  test_utec.py
