[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "utec_py_LF2b2w"
version = "0.0.1"
authors = [
    name="Luke Wallis", email="wallis.luke4@gmail.com"
]
description = "A python API wrapper and authentication handler for the U-Tec API"
readme = "README.md"
require_python = ">=3.8"
license = "MIT"
license-ffiles = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/LF2b2w/utec-py"
Issues = "https://github.com/LF2b2w/utec-py/issues"