[build-system]
requires = ["setuptools>=63"]
build-backend = "setuptools.build_meta"

[project]
name = "utec_py_LF2b2w"
version = "0.4.1"
description = "A U-Home API client library."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name="Luke Wallis", email="wallis.luke4@gmail.com"},
]
dependencies = [
    "aiohttp>=3.7.4,<4.0.0"
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = ["uhome", "home automation", "api client"]

[project.urls]
Homepage = "https://github.com/LF2b2w/utec-py"
Issues = "https://github.com/LF2b2w/utec-py/issues"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["utec_py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "def __repr__",
    "def __str__",
    "@(abc\\.)?abstractmethod",
]